--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+
+<p id="login"><%= link_to "Log In", user_session_path %><p>
+<p id="signup"><%= link_to "Sign Up", new_user_registration_path %><p>
