add user edit with test

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,6 +23,19 @@
 
 <% end %>
 
+<% @posts.each do |post| %>
+    <ul>
+    <a href="<%=post_path(post)%>">
+      <div>
+        <p> <%= post.title %> </p>
+        <p> <%= post.content %> </p>
+      </div>
+    </a>
+  </ul>
+<% end %>
+
+
+
 <% @users.each do |user| %>
 
     <% if user.id != current_user.id%>
